--- a/index.html
+++ b/index.html
@@ -37,24 +37,24 @@
     <header class="contenedor-header">
 
         <!--Navbar -->
-    <nav class="mb-1 navbar navbar-expand-lg navbar-dark  scrolling-navbar fixed-top">
+    <nav id="nav" class="mb-1 navbar navbar-expand-lg navbar-dark  scrolling-navbar fixed-top ">
     <div class="container">
 
         <a class="navbar-brand" href="#">
             <img src="img/imageonline-co-brightnessadjusted.png"  height="60" alt="">
         </a>
-        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent-4"
+        <button id="btn-icon" class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent-4"
           aria-controls="navbarSupportedContent-4" aria-expanded="false" aria-label="Toggle navigation">
-          <span class="navbar-toggler-icon"></span>
+          <span  class="navbar-toggler-icon"></span>
         </button>
-        <div class="collapse navbar-collapse enlaces" id="navbarSupportedContent-4">
+        <div class="collapse navbar-collapse enlaces " id="navbarSupportedContent-4">
           <ul class="navbar-nav ml-auto">
             <li class="nav-item  ">
-              <a class="nav-link-custom " href="#"> Inicio <span class="sr-only">(current)</span>
+              <a class="nav-link-custom " href="index.html"> Inicio <span class="sr-only">(current)</span>
               </a>
             </li>
             <li class="nav-item">
-              <a class="nav-link-custom" href="#">
+              <a class="nav-link-custom" href="servicios.html">
                Servicios</a>
             </li>
             <li class="nav-item">
@@ -82,12 +82,14 @@
                 <p>Soluciones Digitales</p>
                 <a href="#servicios"> <i class="fas fa-chevron-down"></i></a>
             </div>
+            <a href="https://api.whatsapp.com/send?phone=5493547642758&text=Hola!%20Quiero%20contactarme%20con%20ustedes!" target="_blank">
+                <button type="button"class="btn btn-success whatsapp">
+                    <i class="fab fa-whatsapp  "></i>
+                </button>
+                
+            </a>
+            
         </div>
-     <!--    <div class="full-video">
-            <video onloadeddata="this.muted=true" autoplay loop >
-                <source src="videos/video-header.mp4">
-            </video>
-        </div> -->
     </header>
     <section class="servicios" id="servicios">
         <h1>Nuestros Servicios</h1>
@@ -168,14 +170,13 @@
                         </a>
                     </div>
     </section>
-
-    <aside class="equipo">
+    <section class="equipo">
         <h2>Nuestro Equipo</h2>
         <div class="contenedor-team">
             <p>Team C-Manager</p>
                 <a href=""><button type="button">Conocenos</button></a>
         </div>
-    </aside>
+    </section>
     <section class="contacto " id="contacto">
         <div class="contacto-texto">
             <h3>Preguntanos</h3>
@@ -272,6 +273,6 @@
 
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/js/bootstrap.bundle.min.js" integrity="sha384-b5kHyXgcpbZJO/tY9Ul7kGkf1S0CWuKcCD38l8YkeH8z8QjE0GmW1gYU5S9FOnJ0" crossorigin="anonymous"></script>
-
+    <script src="app.js"></script>
 </body>
 </html>
